--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,7 +99,7 @@ section {
 
 .title h2 {
     color: midnightblue;
-    font-size: 45px;
+    font-size: 4vw;
     text-align: right;
     align-self: flex-start;
 }
@@ -140,14 +140,16 @@ section {
 .box {
     border: 3px solid black;
     margin: 10px;
-    padding: 6vh;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
+    padding: 50px;
 }
-
 
 h4 {
     color: black;
+    text-align: left;
+    font-size: 2vw;
+    float: left;
+    border: 2px solid black;
+    position: relative;
+    right: 45px;
 }
 
