--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -143,21 +143,23 @@ section {
     padding: 50px;
 }
 
+.backgrounds {
+    background-color: skyblue;
+    position: relative;
+    right: 50px;
+    top: 35px;
+    padding-right: 15px;
+}
+
 h4 {
     color: black;
     text-align: left;
     font-size: 2vw;
     float: left;
-    border: 2px solid black;
-    position: relative;
-    right: 50px;
-    top: 35px;
 }
 
 .box p {
     border: none;
-    position: relative;
-    right: 50px;
-    top: 35px;
+    color: rgb(48, 48, 48);
 }
 
