Made About Me paragraph more responsive with vw style

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -117,7 +117,7 @@ section {
 }
 
 .content p {
-    font-size: 20px;
+    font-size: 3vw;
     margin-left: 5%;
     margin-right: 5%;
     color: midnightblue;
