--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -165,22 +165,27 @@ section {
 #work1 {
     width: 80%;
     margin-left: 5%;
+    display: flex;
 }
 
 #work2 {
     width: 30%;
+    display: flex;
 }
 
 #work3 {
     width: 30%;
+    display: flex;
 }
 
 #work4 {
     width: 30%;
+    display: flex;
 }
 
 #work5 {
     width: 30%;
+    display: flex;
 }
 
 /* The work items themselves */
@@ -190,6 +195,7 @@ section {
     right: 50px;
     top: 35px;
     padding-right: 15px;
+    flex-wrap: wrap;
 }
 
 /* Each work item title */
@@ -214,34 +220,6 @@ footer {
 
 footer p {
     color: black;
-}
-
-@media screen and (max-width: 1062px) {
-    #work1 {
-        width: 60%;
-    }
-    #work2 {
-        width: 60%;
-    }
-    #work3 {
-        width: 60%;
-    }
-    #work3 h4 {
-        padding-right: 25px;
-    }
-    #work4 {
-        width: 60%;
-    }
-    #work4 p {
-
-    }
-    #work5 {
-        width: 60%;
-    }
-
-    .content a {
-        width: 25%;
-    }
 }
 
 @media screen and (max-width: 1064px) {
