--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -240,7 +240,24 @@ footer p {
     color: black;
 }
 
+@media screen and (max-width: 1144px) {
+    #selfie {
+        margin-top: 5%;
+    }
+}
+
+@media screen and (min-width: 1127px) {
+    #selfie img {
+        margin-top: -25%;
+    }
+}
+
 @media screen and (max-width: 1064px) {
+    #selfie img {
+        width: 140px;
+        height: 210px;
+        margin-top: -30%;
+    }
     #work1 {
         width: 70%;
     }
@@ -259,8 +276,19 @@ footer p {
 }
 
 @media screen and (max-width: 768px) {
+    h1 {
+        font-size: 6vw;
+    }
     nav a {
         font-size: 20px;
+    }
+    .content p {
+        width: 60%;
+    }
+    #selfie img{
+        width: 110px;
+        height: 160px;
+        margin-top: -30%;
     }
     #work .content {
         justify-content: flex-start;
@@ -286,5 +314,11 @@ footer p {
     }
     .content a {
         text-align: center;
+    }
+}
+
+@media screen and (max-width: 551px) {
+    #selfie {
+        margin-top: 15%;
     }
 }
