--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,7 +61,8 @@ nav a:hover {
     height: 30vh;
     width: auto;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
     align-items: flex-end;
     background-position-x: 85%;
     background-position-y: 50%;
@@ -77,7 +78,17 @@ nav a:hover {
     color: black;
     padding: 5px 5px 5px 3px;
 }
-
+#blueshirt {
+    max-width: 400px;
+    min-width: 100px;
+    width: 7%;
+    /* max-height: fit-content; */
+    /* height: auto; */
+    margin-top: 10px;
+    margin-right: 80px;
+    margin-bottom: 25px;
+    overflow: hidden;
+}
 
 /* Main section */
 main {
