Added Project 2 to Work section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -198,6 +198,8 @@ section {
 #work4 {
     width: 30%;
     display: flex;
+    background-image: url(../images/lilypad\ F1.png);
+    background-size: cover;
 }
 
 #work5 {
